--- a/src/smartplanner/FXMLDocument.fxml
+++ b/src/smartplanner/FXMLDocument.fxml
@@ -3,13 +3,15 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXTogglePane?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -101,6 +103,11 @@
                                                             </HBox>
                                                          </children>
                                                       </HBox>
+                                                      <HBox alignment="CENTER" prefHeight="34.0" prefWidth="258.0">
+                                                         <children>
+                                                            <JFXButton onAction="#recordTime" style="-fx-background-color: red;" text="record" />
+                                                         </children>
+                                                      </HBox>
                                                    </children>
                                                 </VBox>
                                                 <VBox alignment="CENTER" prefHeight="82.0" prefWidth="258.0">
@@ -190,6 +197,10 @@
                                     </AnchorPane>
                               </content>
                             </TitledPane>
+                              <TitledPane animated="false" text="Projects">
+                                 <content>
+                                    <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+                                 </content></TitledPane>
                             <TitledPane animated="false" style="-fx-background-color: silver;" text="Link">
                               <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: silver;">
@@ -212,11 +223,49 @@
                                  <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: silver;">
                                        <children>
-                                          <JFXTogglePane layoutX="19.6" layoutY="19.6" prefHeight="180.0" prefWidth="215.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="0.0">
+                                          <GridPane alignment="CENTER" layoutX="10.0" layoutY="9.0" prefHeight="180.0" prefWidth="277.0" AnchorPane.bottomAnchor="10.199999999999989" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.200000000000045" AnchorPane.topAnchor="9.0">
+                                            <columnConstraints>
+                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
                                              <children>
-                                                <JFXButton fx:id="btnAdd" alignment="CENTER" buttonType="RAISED" onAction="#handleGraph" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="Graph" />
+                                                <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#handlePlus" prefHeight="50.0" prefWidth="120.0" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="+@" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                                   <GridPane.margin>
+                                                      <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                                   </GridPane.margin>
+                                                </JFXButton>
+                                                <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="10.0" layoutY="13.0" onAction="#handleEntireOPList" prefHeight="50.0" prefWidth="120.0" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="Entire OP List" GridPane.rowIndex="1">
+                                                   <GridPane.margin>
+                                                      <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                                   </GridPane.margin>
+                                                </JFXButton>
+                                                <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="139.0" layoutY="13.0" onAction="#handleYears" prefHeight="50.0" prefWidth="120.0" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="YEARS" GridPane.columnIndex="1">
+                                                   <GridPane.margin>
+                                                      <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                                   </GridPane.margin>
+                                                </JFXButton>
+                                                <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="139.0" layoutY="13.0" onAction="#handleRANK" prefHeight="50.0" prefWidth="120.0" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="RANK" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                   <GridPane.margin>
+                                                      <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                                   </GridPane.margin>
+                                                </JFXButton>
+                                                <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="139.0" layoutY="57.0" onAction="#handleTimeCheck" prefHeight="50.0" prefWidth="120.0" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="Time Check" GridPane.rowIndex="2">
+                                                   <GridPane.margin>
+                                                      <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                                   </GridPane.margin>
+                                                </JFXButton>
+                                                <JFXButton fx:id="btnAdd" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="139.0" layoutY="104.0" onAction="#handleGraph" prefHeight="50.0" prefWidth="120.0" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="MONTHLY">
+                                                   <GridPane.margin>
+                                                      <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                                   </GridPane.margin>
+                                                </JFXButton>
                                              </children>
-                                          </JFXTogglePane>
+                                          </GridPane>
                                        </children></AnchorPane>
                                  </content>
                               </TitledPane>
