--- a/src/smartplanner/FXMLDocument.fxml
+++ b/src/smartplanner/FXMLDocument.fxml
@@ -2,9 +2,11 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -31,7 +33,7 @@
                                        <children>
                                           <VBox layoutX="-1.0" layoutY="-2.0" prefHeight="180.0" prefWidth="277.0" style="-fx-background-color: silver;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                              <children>
-                                                <VBox prefHeight="200.0" prefWidth="100.0">
+                                                <VBox prefHeight="98.0" prefWidth="258.0">
                                                    <children>
                                                       <HBox>
                                                          <children>
@@ -103,15 +105,26 @@
                                                             </HBox>
                                                          </children>
                                                       </HBox>
-                                                      <HBox alignment="CENTER" prefHeight="34.0" prefWidth="258.0">
-                                                         <children>
-                                                            <JFXButton onAction="#recordTime" style="-fx-background-color: red;" text="record" />
-                                                         </children>
-                                                      </HBox>
                                                    </children>
                                                 </VBox>
                                                 <VBox alignment="CENTER" prefHeight="82.0" prefWidth="258.0">
                                                    <children>
+                                                      <HBox alignment="CENTER" prefHeight="34.0" prefWidth="258.0">
+                                                         <children>
+                                                            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="33.0" prefWidth="135.0" text="count :" />
+                                                            <JFXTextField fx:id="count" text="0">
+                                                               <HBox.margin>
+                                                                  <Insets right="30.0" />
+                                                               </HBox.margin>
+                                                            </JFXTextField>
+                                                            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="135.0" text="time :" />
+                                                            <JFXTextField fx:id="time" alignment="CENTER">
+                                                               <HBox.margin>
+                                                                  <Insets right="30.0" />
+                                                               </HBox.margin>
+                                                            </JFXTextField>
+                                                         </children>
+                                                      </HBox>
                                                       <HBox alignment="CENTER">
                                                          <children>
                                                             <JFXButton fx:id="btnSet" buttonType="RAISED" onAction="#handleBtnSet" ripplerFill="#ffd000" style="-fx-background-color: white;" text="SET">
@@ -127,7 +140,11 @@
                                                                <HBox.margin>
                                                                   <Insets right="10.0" />
                                                                </HBox.margin></JFXButton>
-                                                            <JFXButton fx:id="btnPomo" buttonType="RAISED" layoutX="162.0" layoutY="10.0" onAction="#handlePomo" ripplerFill="#ffd000" style="-fx-background-color: white;" text="pomo" />
+                                                            <JFXButton fx:id="btnPomo" buttonType="RAISED" layoutX="162.0" layoutY="10.0" onAction="#handlePomo" ripplerFill="#ffd000" style="-fx-background-color: white;" text="pomo">
+                                                               <HBox.margin>
+                                                                  <Insets right="10.0" />
+                                                               </HBox.margin></JFXButton>
+                                                            <JFXButton fx:id="btnStop" buttonType="RAISED" layoutX="187.0" layoutY="10.0" onAction="#handleStop" ripplerFill="#ffd000" style="-fx-background-color: white;" text="stop" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -200,7 +217,49 @@
                             </TitledPane>
                               <TitledPane animated="false" text="Projects">
                                  <content>
-                                    <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+                                    <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: silver;">
+                                       <children>
+                                          <VBox layoutX="96.0" prefHeight="220.0" prefWidth="277.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                             <children>
+                                                <VBox alignment="CENTER" prefHeight="91.0" prefWidth="258.0">
+                                                   <children>
+                                                      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                                         <children>
+                                                            <JFXButton prefHeight="100.0" prefWidth="250.0" style="-fx-background-color: gold;" text="running">
+                                                               <font>
+                                                                  <Font size="16.0" />
+                                                               </font>
+                                                            </JFXButton>
+                                                         </children>
+                                                      </HBox>
+                                                      <HBox alignment="CENTER" prefHeight="33.0" prefWidth="258.0">
+                                                         <children>
+                                                            <JFXProgressBar />
+                                                         </children>
+                                                      </HBox>
+                                                   </children>
+                                                </VBox>
+                                                <HBox alignment="CENTER" prefHeight="88.0" prefWidth="258.0">
+                                                   <children>
+                                                      <JFXButton prefHeight="100.0" prefWidth="260.0" style="-fx-background-color: silver; -fx-border-color: gold;" text="completed">
+                                                         <font>
+                                                            <Font size="16.0" />
+                                                         </font>
+                                                      </JFXButton>
+                                                   </children>
+                                                </HBox>
+                                                <HBox alignment="BOTTOM_CENTER" prefHeight="29.0" prefWidth="258.0">
+                                                   <children>
+                                                      <JFXButton alignment="TOP_LEFT" style="-fx-background-color: red;" text="add">
+                                                         <HBox.margin>
+                                                            <Insets top="5.0" />
+                                                         </HBox.margin>
+                                                      </JFXButton>
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </VBox>
+                                       </children></AnchorPane>
                                  </content></TitledPane>
                             <TitledPane animated="false" style="-fx-background-color: silver;" text="Link">
                               <content>
@@ -240,7 +299,7 @@
                                                       <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                                                    </GridPane.margin>
                                                 </JFXButton>
-                                                <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="10.0" layoutY="13.0" onAction="#handleEntireOPList" prefHeight="50.0" prefWidth="120.0" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="Entire OP List" GridPane.rowIndex="1">
+                                                <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="10.0" layoutY="13.0" onAction="#handleEntireOPList" prefHeight="50.0" prefWidth="120.0" ripplerFill="#ffbf00" style="-fx-background-color: white;" text="Entire OoP" GridPane.rowIndex="1">
                                                    <GridPane.margin>
                                                       <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                                                    </GridPane.margin>
